# Monsta

./: .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  LICENSE  MonstaDemo  README.md  TODO.txt  a  commands.txt  format.sh
.cmake/api/v1/reply/: cache-v2-0e8c59cff28cb7c2aca7.json  cache-v2-826b98369d621ef0ceb3.json  cmakeFiles-v1-96a8e915c4464b00023e.json  cmakeFiles-v1-cb23eef6223c148e75e4.json  codemodel-v2-08bc4290421aa7989182.json  codemodel-v2-60b3c7b1908c75b7980b.json  codemodel-v2-9eb3014d5abe9a82dd94.json  codemodel-v2-c658b1801cc98d0bee98.json  codemodel-v2-e7feb336e47ec35579e5.json  index-2024-05-04T23-26-53-0206.json  index-2024-05-05T17-14-33-0054.json  index-2024-05-10T23-20-04-0517.json  index-2024-05-16T16-43-19-0872.json  index-2024-05-16T17-44-04-0992.json  target-a-0ecc6a2fc52cd428c0b4.json  target-a-7580b85c0ec68dc206fc.json  target-a-cac89b36dcbb568e5fb3.json  target-a-dfd2121f2dbe67777277.json  target-a-fad25c8b5c1db3600866.json
.externalToolBuilders/: org.eclipse.cdt.make.core.ScannerConfigBuilder.launch  org.eclipse.cdt.make.core.makeBuilder.launch
CMakeScripts/: ReRunCMake.make
Resources/Shaders/: Square.frag  Square.vert
include/Monsta/: Config.h  Engine.h  Monsta.h
include/Monsta/Core/: Game.h  Window.h
include/Monsta/Events/: EventHelper.h  InputEvent.h  RenderEvent.h  WindowAdapter.h  WindowListener.h
include/Monsta/Events/Input/: InputAdapter.h  InputListener.h
include/Monsta/Events/Window/: WindowAdapter.h  WindowListener.h
include/Monsta/Exceptions/: InvalidShaderException.h
include/Monsta/Graphics/Context/: GraphicsContext.h  OpenGLContext.h
include/Monsta/Graphics/Pipeline/: VAO.h  VBO.h  VertexBuffers.h
include/Monsta/Graphics/Renderer/: GameLoop.h  GameObject.h
include/Monsta/Graphics/Shaders/: ShaderReader.h  ShaderSystem.h
include/Monsta/Interfaces/: EventListener.h  GameObject.h
include/Monsta/Platform/: Platform.h  Version.h
include/Monsta/Renderer/Context/: Context.h  OpenGLRenderer.h
include/Monsta/Renderer/Pipeline/: ElementBuffer.h  Shader.h  VertexArray.h  VertexBuffer.h  types.h
include/Monsta/System/: OS.h
include/Monsta/Window/: MWindow.h
include/glm/: CMakeLists.txt
lib/Windows/debug/GLFW/: glfw3.lib
lib/Windows/debug/OpenAL/: OpenAL32.exp
lib/Windows/release/GLFW/: glfw3.lib
lib/Windows/release/OpenAL/: OpenAL32.exp
resources/shaders/: square_frag.glsl  square_vert.glsl
src/: main.cpp
src/Monsta/: Engine.cpp
src/Monsta/Core/: Game.cpp  Window.cpp
src/Monsta/Events/: InputEvent.cpp  RenderEvent.cpp  WindowAdapter.cpp  WindowListener.cpp
src/Monsta/Events/Input/: InputAdapter.cpp  InputListener.cpp
src/Monsta/Events/Window/: WindowAdapter.cpp  WindowListener.cpp
src/Monsta/Graphics/Context/: GraphicsContext.cpp  OpenGLContext.cpp
src/Monsta/Graphics/Pipeline/: VAO.cpp  VBO.cpp
src/Monsta/Graphics/Renderer/: GameLoop.cpp
src/Monsta/Graphics/Shaders/: ShaderReader.cpp  ShaderSystem.cpp
src/Monsta/Interfaces/: EventListener.cpp
src/Monsta/Renderer/Context/: Context.cpp  OpenGLRenderer.cpp
src/Monsta/Renderer/Pipeline/: ElementBuffer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Monsta/Window/: MWindow.cpp
